--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,60 @@ body {
   -o-transition:stroke-dashoffset 1s ease-in;
   transition:stroke-dashoffset 1s ease-in;
 }
+.leaflet-marker-icon {
+  -webkit-animation: FadeIn .7s; /* Safari 4+ */
+  -moz-animation:    FadeIn .7s; /* Fx 5+ */
+  -o-animation:      FadeIn .7s; /* Opera 12+ */
+  animation:         FadeIn .7s;
+}
+
+@-webkit-keyframes FadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@-moz-keyframes FadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@-o-keyframes FadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@keyframes FadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0px;
+  height: 0px;
+  background: rgba(0,0,0,.5);
+  z-index: 1001;
+  display: none;
+  opacity: 0;
+  -webkit-transition: opacity .3s ease-in;
+  -moz-transition: opacity .3s ease-in;
+  -o-transition: opacity .3s ease-in;
+  transition: opacity .3s ease-in;
+}
+
+/* tweet gallery */
+.gallery {
+  width: 301px;
+  margin-left: -10px;
+  height: 145px;
+}
+.gallery .tweet-image {
+  width: 140px;
+  height: 70px;
+  float: left;
+  margin: 5px;
+  overflow: hidden;
+}
+.gallery[data-images="1"] .tweet-image {
+  width: 285px !important;
+  height: 143px;
+}
