--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ body {
   position: absolute;
   left: 0px;
   height: 0px;
-  background: rgba(0,0,0,.5);
+  background: rgba(0,0,0,.6);
   z-index: 1001;
   display: none;
   opacity: 0;
@@ -59,6 +59,48 @@ body {
   -moz-transition: opacity .3s ease-in;
   -o-transition: opacity .3s ease-in;
   transition: opacity .3s ease-in;
+  color: #FFFFFF;
+}
+.overlay > img {
+  left: 50%;
+  top: 50%;
+  position: absolute;
+}
+.overlay > .arrow {
+  width: 30px;
+  height: 50px;
+  left: 50%;
+  top: 50%;
+  margin-top: -25px;
+  position: absolute;
+  font-size: 40px;
+  line-height: 50px;
+}
+.overlay > #leftArrow:before {
+  content: "\f172";
+}
+.overlay > #rightArrow:before {
+  content: "\f173";
+}
+.overlay > .Icon {
+  opacity: .4;
+  -webkit-user-select: none;
+}
+.overlay > .Icon:hover {
+  opacity: 1;
+}
+.overlay > .close {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 35px;
+  line-height: 40px;
+  text-align: right;
+}
+.overlay > .close:before {
+  content: "\f045";
 }
 
 /* tweet gallery */
@@ -77,4 +119,26 @@ body {
 .gallery[data-images="1"] .tweet-image {
   width: 285px !important;
   height: 143px;
+}
+@font-face {
+  font-family: 'rosettaicons';
+  src: url('https://abs.twimg.com/a/1421172151/font/rosetta-icons-Regular.eot');
+  src: url('https://abs.twimg.com/a/1421172151/font/rosetta-icons-Regular.eot?#iefix') format('embedded-opentype'), url('https://abs.twimg.com/a/1421172151/font/rosetta-icons-Regular.woff') format('woff'), url('../../font/rosetta-icons-Regular.ttf') format('truetype');
+  font-style: normal;
+  font-weight: normal
+}
+.Icon {
+  background: transparent;
+  display: inline-block;
+  font-style: normal;
+  vertical-align: baseline
+}
+
+.Icon:before {
+  display: block;
+  font-family: "rosettaicons";
+  font-weight: normal;
+  font-style: normal;
+  text-align: center;
+  -webkit-font-smoothing: antialiased
 }
