--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,10 @@ body {
   left: 0px;
 }
 .path-start {
-  -webkit-transition:stroke-dashoffset 1s ease-in;
-  -moz-transition:stroke-dashoffset 1s ease-in;
-  -o-transition:stroke-dashoffset 1s ease-in;
-  transition:stroke-dashoffset 1s ease-in;
+  -webkit-transition:stroke-dashoffset .1s ease-in;
+  -moz-transition:stroke-dashoffset .1s ease-in;
+  -o-transition:stroke-dashoffset .1s ease-in;
+  transition:stroke-dashoffset .1s ease-in;
 }
 .leaflet-marker-icon {
   -webkit-animation: FadeIn .7s; /* Safari 4+ */
@@ -52,7 +52,7 @@ body {
   left: 0px;
   height: 0px;
   background: rgba(0,0,0,.6);
-  z-index: 1001;
+  z-index: 1004;
   display: none;
   opacity: 0;
   -webkit-transition: opacity .3s ease-in;
@@ -141,4 +141,20 @@ body {
   font-style: normal;
   text-align: center;
   -webkit-font-smoothing: antialiased
+}
+#loadingCover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0px;
+  height: 0px;
+  background: #000000 url(../images/loading.gif) no-repeat center center;
+  z-index: 1004;
+  display: block;
+  opacity: 1;
+  -webkit-transition: opacity .75s ease-in;
+  -moz-transition: opacity .75s ease-in;
+  -o-transition: opacity .75s ease-in;
+  transition: opacity .75s ease-in;
+  color: #FFFFFF;
 }
